<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Calculadora Imposto Importacao</string>
    <string name="app_title">CIMP</string>

    <string name="valores">Valores</string>
    <string name="cotacao_usd">Cotação (USD)</string>
    <string name="valor_frete_usd">Frete (USD)</string>
    <string name="valor_produto_usd">Produto (USD)</string>

    <string name="taxas">Taxas</string>
    <string name="imposto_importacao">Importação (%)</string>
    <string name="estado">Estado (opcional)</string>
    <string name="icms">ICMS (%)</string>

    <string name="valor_produto_brl">Valor do produto (BRL)</string>
    <string name="valor_frete_brl">Valor do frete (BRL)</string>
    <string name="valor_icms_brl">ICMS (BRL)</string>
    <string name="valor_importacao_brl">Importação (BRL)</string>
    <string name="total">Total (BRL)</string>

    <string name="hint_valor_brl">R$ 0.00</string>
    <string name="valor_imposto_importacao">60</string>

    <string name="botao_limpar">Limpar</string>
    <string name="botao_calcular">Calcular</string>

    <string name="menu_iten_atualizar">Atualizar</string>
    <string name="menu_item_ajuda">Ajuda</string>
    <string name="menu_item_sobre">Sobre</string>

    <string name="ultima_consulta">Ultima atualização</string>
    <string name="fonte">Fonte</string>

    <string-array name="array_estados">
        <item>Acre </item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>

    <string name="ajuda_icms">
        O ICMS é a sigla referente ao imposto sobre circulação de mercadorias e prestação de serviços de transporte interestadual e intermunicipal e comunicação. É também competência de cada estado brasileiro instituir e cobrar os valores que devem ser tabelados referentes aos mesmos. Pode incidir sobre entrada de mercadoria importada do exterior, por pessoa física ou jurídica, ainda quando se tratar de bem destinado a consumo ou ativo permanente do estabelecimento.
    </string>
    <string name="ajuda_imposto_importacao" tools:ignore="StringFormatInvalid">
        O valor da tributação é definido  pela Receita Federal do Brasil, com alíquota única do Imposto  de Importação de 60% sob o valor aduaneiro (incluindo valor da mercadoria, frete e seguro, se  houver).
    </string>

    <string name="cotacao">Cotação</string>
    <string name="icms_ajuda">ICMS</string>
    <string name="taxa_importacao">Taxa de importação</string>

    <string name="cotacao_api_description">Cotação API</string>
    <string name="github_description">GitHub</string>
    <string name="github">github.com/Tomahaawk/CIMP</string>

    <string name="gohorse_project">GoHorse Project</string>
    <string name="api_promasters">api.promasters.net.br/cotacao/</string>
</resources>
